--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <header class="app-header">
-        <h1>// COMPILE_ASSIST //<span class="version">v1.5 :: DB Config</span></h1>
+        <h1>// COMPILE_ASSIST //<span class="version">v1.51</span></h1>
     </header>
 
     <main class="main-content">
